# nonogram

./: LICENSE  README.md  nonogram.py  puzzle.txt  pyproject.toml
