[tool.poetry]
name = "nonogram"
version = "0.1.0"
description = "Solves nonograms"
authors = ["Matt McCredie <mccredie+git@gmail.com>"]
license = "MIT"

pakcages = [
  { include = 'nonogram.py' }
]

[tool.poetry.scripts]
solve = 'nonogram:main'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
